# AndroidFFmpegLabs

./: README.md  settings.gradle
app/: build.gradle  build_android.sh
app/src/androidTest/java/com/kevin/androidffmpegplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffmpeg_decoder.cpp  h264player.cpp  kxffmpeg.cpp
app/src/main/cpp/include/: Log.h  block_queue.h  buffer_info.h  codec_id.h  ffmpeg_decoder.h  h264player.h  stream_data.h
app/src/main/cpp/include/libavcodec/: avcodec.h
app/src/main/cpp/include/libavutil/: ffversion.h  intreadwrite.h
app/src/main/cpp/include/libffmpeg/: config.h
app/src/main/cpp/swig/: h264player.i
app/src/main/cpp/wrapper/com/kevin/androidffmpegplayer/: FFmpegDecoder.java  KxFFmpeg.java  KxFFmpegJNI.java  h264playerJAVA_wrap.cxx
app/src/main/java/com/kevin/androidffmpegplayer/: H264Player.java  MainActivity.kt
app/src/main/java/com/kevin/androidffmpegplayer/decoder/: Decoder.java  FrameInfo.java  SoftDecoder.java
app/src/main/java/com/kevin/androidffmpegplayer/frame/: FrameEntity.java  FrameHeader.java  P2pFrameHeader.java
app/src/main/java/com/kevin/androidffmpegplayer/jni/: AVCodecID.java  BufferInfo.java  FFmpegDecoder.java  KxFFmpeg.java  KxFFmpegJNI.java  SWIGTYPE_AVMediaType.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kevin/androidffmpegplayer/: ExampleUnitTest.kt
ffmpeg/: build.gradle
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: CMakeLists.txt  ffmpeg_decoder.cpp
ffmpeg/src/main/cpp/H2645Parser/: CH2645PacketParser.cpp  CH2645PacketParser.h  H2645ParserPublic.hpp  H264Parser.cpp  H264Parser.h  h2645_paramter.h  h265Parser.cpp  h265Parser.h  parser_util.h
ffmpeg/src/main/cpp/include/: Log.h  block_queue.h  buffer_info.h  ffmpeg_decoder.h  stream_data.h
ffmpeg/src/main/cpp/swig/: h264player.i
ffmpeg/src/main/java/com/kevin/ffmpeg/jni/: AVCodecID.java  BufferInfo.java  FFmpegDecoder.java  KxFFmpeg.java  KxFFmpegJNI.java
gradle/wrapper/: gradle-wrapper.properties
